# pytorch-play

./: CMakeLists.txt  README.md  example.cpp  generate_mock_data.py  linear_network.py  requirements.txt  test_network.py  visualize_results.py
